<resources>
    <string name="app_name">WorkPeace</string>
    <string name="Bienvenido">Bienvenido</string>
    <string name="Logo">Logo</string>
    <string name="Nombre">Nombre Completo</string>
    <string name="Usuario">Usuario</string>
    <string name="clave">Contraseña</string>
    <string name="btnRegistro">Registrarse</string>
    <string name="btnCuenta">¿Ya tienes cuenta? Iniciar Sesión</string>
    <string name="HolaDeNuevo">Hola! bienvenid@ de nuevo</string>
    <string name="Iniciar">Inicia sesión para continuar</string>
    <string name="OlvidoClave">¿Ha olvidado su contraseña?</string>
    <string name="Sesion">Iniciar Sesión</string>
    <string name="InTech">By InTech</string>
    <string name="UsuarioNuevo">¿Nuevo Usuario? Registrate aqui</string>
    <string name="Registrarse">Registrate para empezar tu nuevo viaje</string>
    <string name="Ejemplo">PANTALLA PERFIL</string>
    <string name="Ejem">HOLA</string>
    <string name="A">CHAO</string>
    <string name="B">BUENAS</string>
    <string name="Mail">Email</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_yoga">YogaActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>